--- a/frontend/css/layers/components/label.scss
+++ b/frontend/css/layers/components/label.scss
@@ -1,5 +1,3 @@
-@layer components {
-  .formLabel {
-    @apply block text-sm font-medium text-gray-700 mb-1;
-  }
+.formLabel {
+  @apply block text-sm font-medium text-gray-700 mb-1;
 }
